--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -22,12 +22,12 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.11.0",
     "openai": "^4.62.0",
-    "passport": "^0.4.1",
     "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "passport": "^0.4.1"
   },
   "description": ""
 }
